--- a/Client/src/app/components/dashboard/dashboard.component.html
+++ b/Client/src/app/components/dashboard/dashboard.component.html
@@ -5,8 +5,8 @@
         [filterable]="true"
         [expandOnFilter]="filterExpandSettings"
         [nodes]="treeNodes"
-        childrenField="subCategories"
-        textField="categoryName"
+        childrenField="Departments"
+        textField="Name"
         idField="id"
     >
 </kendo-treeview>
