--- a/Client/src/app/components/employees/employees.component.html
+++ b/Client/src/app/components/employees/employees.component.html
@@ -1,2 +1,4 @@
-<app-dashboard></app-dashboard>
-<app-grid-employee></app-grid-employee>
+<div>
+    <app-dashboard></app-dashboard>
+    <app-grid-employee></app-grid-employee>
+</div>
