--- a/Client/src/app/components/grid-employee/grid-employee.component.html
+++ b/Client/src/app/components/grid-employee/grid-employee.component.html
@@ -2,26 +2,39 @@
 
 
     <div class="navfeature">
-        <kendo-excelexport [data]="gridData" fileName="Products.xlsx" #excelexport>
-            <kendo-excelexport-column field="Id" title="Mã nhân viên">
-            </kendo-excelexport-column>
-            <kendo-excelexport-column field="ContactName" title="Tên nhân viên">
-            </kendo-excelexport-column>
-        </kendo-excelexport>
-        <button type="button" class="k-button" (click)="excelexport.save()">Export To Excel</button>
+        <div>
+            <a>
+                <button type="button" class="k-button" (click)="onCreate()">
+                    Create
+                </button>
+            </a>
+            &nbsp;
+            <a>
+                <kendo-excelexport [data]="gridData" fileName="Products.xlsx" #excelexport>
+                    <kendo-excelexport-column field="Id" title="Mã nhân viên">
+                    </kendo-excelexport-column>
+                    <kendo-excelexport-column field="ContactName" title="Tên nhân viên">
+                    </kendo-excelexport-column>
+                </kendo-excelexport>
+                <button type="button" class="k-button" (click)="excelexport.save()">Export To Excel</button>
+            </a>
+        </div>   
     </div>
     <div>
         <kendo-grid
             [kendoGridBinding]="gridData"
-            [pageSize]="10"
+            [pageSize]="5"
             [pageable]="true"
             [sortable]="true"
             [filterable]="true"
-            [height]="510"
+            [height]="350"
+            [selectable]="true" 
+            (dblclick)="dblClickEvent($event)"
             >
-            <kendo-grid-column field="Id" title="Mã nhân viên" [width]="50"></kendo-grid-column>
+            <kendo-grid-column field="Id" title="Mã nhân viên" [width]="80"></kendo-grid-column>
             <kendo-grid-column field="ContactName" title="Họ và tên" [width]="120"></kendo-grid-column>
-            <kendo-grid-column field="City" title="Thành phố" [width]="100"></kendo-grid-column>
+            <kendo-grid-column field="City" title="Tên phòng ban" [width]="100"></kendo-grid-column>
+            <kendo-grid-column field="ContactTitle" title="Vị trí" [width]="130"></kendo-grid-column>
             <kendo-grid-column field="ContactTitle" title="Chức danh" [width]="130"></kendo-grid-column>
             </kendo-grid>
     </div>
