--- a/Client/src/app/components/button-add/button-add.component.css
+++ b/Client/src/app/components/button-add/button-add.component.css
@@ -1,10 +1,3 @@
-.navfeature{
-    height: max-content;
-    padding: 1%;
-    align-content: flex-end;
-    background-color: cadetblue;
-}
-
 .bodyAdd {
     margin: 0;
 }
@@ -43,3 +36,7 @@
     display: table;
     clear: both;
   }
+
+.errorMessage{
+    color: red;
+}
