--- a/Client/src/app/components/dashboard/dashboard.component.html
+++ b/Client/src/app/components/dashboard/dashboard.component.html
@@ -1,13 +1,17 @@
+<p>{{ selectedKeys }}</p>
 <div class="leftbox">
     <kendo-treeview
         kendoTreeViewHierarchyBinding
         kendoTreeViewExpandable
         [filterable]="true"
         [expandOnFilter]="filterExpandSettings"
-        [nodes]="treeNodes"
+        [nodes]="TreeDepartment"
         childrenField="Departments"
         textField="Name"
-        idField="id"
+        idField="DepartmentId"
+        kendoTreeViewSelectable
+        selectBy = "DepartmentId"
+        [(selectedKeys)]="selectedKeys"
     >
 </kendo-treeview>
 </div>
