--- a/Client/src/app/components/grid-employee/grid-employee.component.html
+++ b/Client/src/app/components/grid-employee/grid-employee.component.html
@@ -1,14 +1,7 @@
-<div class="rightbox">
 
 
     <div class="navfeature">
         <div>
-            <a>
-                <button type="button" class="k-button" (click)="onCreate()">
-                    Create
-                </button>
-            </a>
-            &nbsp;
             <a>
                 <kendo-excelexport [data]="gridData" fileName="Products.xlsx" #excelexport>
                     <kendo-excelexport-column field="Id" title="Mã nhân viên">
@@ -22,14 +15,14 @@
     </div>
     <div>
         <kendo-grid
-            [kendoGridBinding]="gridData"
-            [pageSize]="5"
-            [pageable]="true"
-            [sortable]="true"
+            [data]="gridView"
             [filterable]="true"
-            [height]="350"
-            [selectable]="true" 
+            [pageSize]="pagesize"
+            [skip]="skip"
+            [pageable]="true"
+            [height]="400"
             (dblclick)="dblClickEvent($event)"
+            (pageChange)="pageChange($event)"
             >
             <kendo-grid-column field="Id" title="Mã nhân viên" [width]="80"></kendo-grid-column>
             <kendo-grid-column field="ContactName" title="Họ và tên" [width]="120"></kendo-grid-column>
@@ -38,4 +31,92 @@
             <kendo-grid-column field="ContactTitle" title="Chức danh" [width]="130"></kendo-grid-column>
             </kendo-grid>
     </div>
-</div>
+
+    <kendo-dialog
+    *ngIf="opened"
+    title="Edit Employee"
+    (close)="close('cancel')"
+    [minWidth]="250"
+    [width]="550"
+  >
+    <div style="margin: 10px;">
+      <p>Enter your username below</p>
+      <div class="row">
+        <div class="column">
+          <p>ID</p>
+          <div class="example-wrapper">
+            <input
+                class="k-textbox"
+                placeholder="Employee Id"
+                value=""
+                style="width: 200px"
+                [(ngModel)]="Id"
+              />
+          </div>
+        </div>
+        <div class="column">
+          <p>First name</p>
+          <div class="example-wrapper">
+            <input
+              class="k-textbox"
+              placeholder="Firstname"
+              style="width: 200px"
+              [(ngModel)]="Firstname"
+          />
+          </div>
+        </div>
+        <div class="column">
+          <p>Last name</p>
+          <div class="example-wrapper">
+            <input
+              class="k-textbox"
+              placeholder="Lastname"
+              style="width: 200px"
+              [(ngModel)]="Lastname"
+            />
+          </div>
+        </div>
+    
+        <div class="column">
+          <p>Department</p>
+          <kendo-dropdowntree
+            kendoDropDownTreeExpandable
+            [kendoDropDownTreeHierarchyBinding]="departments"
+            textField="department"
+            valueField="id"
+            childrenField="items"
+            [(ngModel)]="selectedDepartment"
+            class="furniture"
+        ></kendo-dropdowntree>
+        </div>
+    
+        <div class="column">
+          <p>Postion</p>
+            <kendo-dropdownlist
+              [data]="postions"
+              textField="Name"
+              valueField="Id"
+              [(ngModel)]="selectedPosition"
+            >
+          </kendo-dropdownlist>
+        </div>
+    
+        <div class="column">
+          <p>Title</p>
+            <kendo-dropdownlist
+              [data]="listItems"
+              textField="text"
+              valueField="value"
+              [(ngModel)]="selectedTitle"
+            >
+          </kendo-dropdownlist>
+        </div>
+    </div>
+    </div>
+    <kendo-dialog-actions>
+      <button kendoButton (click)="close('no')">No</button>
+      <button kendoButton (click)="close('yes')">Yes</button>
+    </kendo-dialog-actions>
+  </kendo-dialog>
+
+
