--- a/Client/src/app/components/dashboard/dashboard.component.html
+++ b/Client/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,3 @@
-<p>{{ selectedKeys }}</p>
 <div class="leftbox">
     <kendo-treeview
         kendoTreeViewHierarchyBinding
@@ -12,6 +11,7 @@
         kendoTreeViewSelectable
         selectBy = "DepartmentId"
         [(selectedKeys)]="selectedKeys"
+        (selectedKeysChange) = "selectKeyChange($event)"
     >
 </kendo-treeview>
 </div>
